Review image base to upgrade applications

--- a/ubuntu/18.04/custom/preseed.cfg
+++ b/ubuntu/18.04/custom/preseed.cfg
@@ -25,11 +25,11 @@ d-i mirror/http/directory string /ubuntu
 d-i mirror/http/proxy string
 
 # To create a normal user account.
-d-i passwd/user-fullname string develop
-d-i passwd/username string develop
-d-i passwd/user-password password develop
-d-i passwd/user-password-again password develop
-d-i passwd/user-uid string 1010
+d-i passwd/user-fullname string dev
+d-i passwd/username string dev
+d-i passwd/user-password password dev
+d-i passwd/user-password-again password dev
+d-i passwd/user-uid string 1000
 d-i user-setup/allow-password-weak boolean true
 
 ### Partitioning
@@ -62,19 +62,28 @@ d-i apt-setup/security_path string /ubuntu
 
 ### Package selection
 ##d-i tasksel/first multiselect none
-d-i pkgsel/include string net-tools docker.io vim openssh-server samba curl wget php-cli php-zip unzip php7.2-mbstring php7.2-curl php7.2-dom php7.2-gd
+d-i pkgsel/include string net-tools docker.io vim openssh-server samba curl wget unzip php-cli
 d-i pkgsel/upgrade select full-upgrade
 d-i pkgsel/update-policy select unattended-upgrades
 
+# grub boot loader
+d-i grub-installer/only_debian                              boolean     true
+d-i grub-installer/with_other_os                            boolean     true
+
 ### Finishing up the installation
 ##Add user "develop" member of "docker" to see the service
-##Add id_rsa and id_rsa.pub to user "develop"
+##Add id_rsa and id_rsa.pub to user "dev"
 ##Set "docker" as a service when system start
 d-i preseed/late_command string \
  cp -r /custom /target/custom; \
  in-target sh -c 'cat /custom/keyboard > /etc/default/keyboard'; \
  in-target sh -c 'cat /custom/locale > /etc/default/locale'; \
- in-target sh -c 'bash /custom/prepare.sh';
+ in-target sh -c 'apt-get -y install software-properties-common'; \
+ in-target sh -c 'add-apt-repository ppa:ondrej/php -y'; \
+ in-target sh -c 'apt-get install -y php7.4-{cli,bcmath,bz2,intl,gd,mbstring,mysql,zip,common}'; \
+ in-target sh -c 'ufw disable'; \
+ in-target sh -c 'bash /custom/prepare.sh'; \
+ in-target sh -c 'eject || true';
 
 ### Shutdown machine when finish installation
 d-i debian-installer/splash boolean false
